Final Touches and in-game micro-improvements.

--- a/src/main/resources/assets/mankesmusic/lang/en_us.json
+++ b/src/main/resources/assets/mankesmusic/lang/en_us.json
@@ -9,7 +9,7 @@
 	"item.mankesmusic.music_disc_alpha": "Music Disc",
 
 
-	"item.mankesmusic.music_disc_renaissance.desc": "Manke - renaissance",
+	"item.mankesmusic.music_disc_renaissance.desc": "Manke - synth-ia",
 	"item.mankesmusic.music_disc_districts.desc": "Manke - districts",
 	"item.mankesmusic.music_disc_match_cut.desc": "C418 - match cut",
 	"item.mankesmusic.music_disc_wooden_love.desc": "C418 - wooden love",
